// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`loadTranslations should correctly merge and transform translations 1`] = `
{
  "ar": {
    "categories": {
      "title": "معلومات محلية",
    },
    "events": {
      "title": "الفعاليات",
    },
  },
  "de": {
    "categories": {
      "events": "Veranstaltungen",
      "title": "Malte Informationen",
    },
    "events": {
      "title": "Veranstaltungen",
    },
    "news": {
      "title": "Malte Nachrichten",
    },
  },
  "en": {
    "categories": {
      "title": "Malte information",
    },
    "events": {
      "title": "Malte Events",
    },
  },
  "kmr": {
    "categories": {
      "title": "Zanyariyên xwecihî",
    },
  },
  "zh-CN": {
    "categories": {
      "title": "本地信息",
    },
  },
}
`;

exports[`loadTranslations should correctly transform translations 1`] = `
{
  "ar": {
    "categories": {
      "title": "معلومات محلية",
    },
    "events": {
      "title": "الفعاليات",
    },
  },
  "de": {
    "categories": {
      "events": "Veranstaltungen",
      "title": "Lokale Informationen",
    },
    "events": {
      "title": "Veranstaltungen",
    },
    "news": {
      "title": "Nachrichten",
    },
  },
  "kmr": {
    "categories": {
      "title": "Zanyariyên xwecihî",
    },
  },
  "zh-CN": {
    "categories": {
      "title": "本地信息",
    },
  },
}
`;
